objects/APTSECOM_New_Sales_Lead_Values__mdt.object
<CustomObject>
    <fields>
        <fullName>APTSECOM_Is_Abandoned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Abandoned Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTSECOM_Store__c</fullName>
        <label>Store</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Corporate Westlaw</fullName>
                </value>
                <value>
                    <fullName>FindLaw</fullName>
                </value>
                <value>
                    <fullName>Find Law</fullName>
                    <isActive>false</isActive>
                    <label>Find Law</label>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Government Practical Law</fullName>
                </value>
                <value>
                    <fullName>Small Law</fullName>
                </value>
                <value>
                    <fullName>Small Law Practical Law</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ECOM_Tracking_Code__c</fullName>
        <label>Tracking Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ecom_Campaign_Cell__c</fullName>
        <label>Campaign Cell</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ecom_Campaign_ID__c</fullName>
        <label>Campaign ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ecom_Lead_Description__c</fullName>
        <label>Lead Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ecom_Lead_Score__c</fullName>
        <label>Lead Score</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ecom_Lead_Source__c</fullName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Association Promo Code</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>Call In</fullName>
                </value>
                <value>
                    <fullName>Cross TR Referral</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>E-Mail</fullName>
                </value>
                <value>
                    <fullName>Existing Customer</fullName>
                </value>
                <value>
                    <fullName>Forms</fullName>
                </value>
                <value>
                    <fullName>Internal Event</fullName>
                </value>
                <value>
                    <fullName>Internal Referral</fullName>
                </value>
                <value>
                    <fullName>Jigsaw</fullName>
                </value>
                <value>
                    <fullName>LinkedIn Sales Navigator</fullName>
                </value>
                <value>
                    <fullName>List Load</fullName>
                </value>
                <value>
                    <fullName>List Purchased</fullName>
                </value>
                <value>
                    <fullName>List - Rented</fullName>
                </value>
                <value>
                    <fullName>Live Event</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Marketing Automation</fullName>
                </value>
                <value>
                    <fullName>Marketing Event</fullName>
                </value>
                <value>
                    <fullName>Marketing Promo Code</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partner Event</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Referral - External</fullName>
                </value>
                <value>
                    <fullName>Referral Inbound</fullName>
                </value>
                <value>
                    <fullName>Rep Generated</fullName>
                </value>
                <value>
                    <fullName>Seminar</fullName>
                </value>
                <value>
                    <fullName>Social</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ecom_Lead_Type__c</fullName>
        <label>Lead Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <default>true</default>
                    <label>A</label>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ecom_Organization_Type__c</fullName>
        <label>Organization Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ecom_Product_Solution_of_Interest__c</fullName>
        <label>Product Solution of Interest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ecom_Source_Description__c</fullName>
        <label>Source Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ecom_Source_Type__c</fullName>
        <label>Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party Call Center</fullName>
                    <default>true</default>
                    <label>3rd Party Call Center</label>
                </value>
                <value>
                    <fullName>3rd Party Social Event</fullName>
                </value>
                <value>
                    <fullName>Accountant</fullName>
                </value>
                <value>
                    <fullName>Andromeda</fullName>
                </value>
                <value>
                    <fullName>Business Law Solution</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Commercial Info Campaign</fullName>
                </value>
                <value>
                    <fullName>Customer Referral</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Data.com</fullName>
                </value>
                <value>
                    <fullName>Direct Email</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Drop-Off/Email</fullName>
                </value>
                <value>
                    <fullName>eCommerce ANZ</fullName>
                </value>
                <value>
                    <fullName>Eloqua-ANZ</fullName>
                </value>
                <value>
                    <fullName>Eloqua-SLF</fullName>
                </value>
                <value>
                    <fullName>External referral</fullName>
                </value>
                <value>
                    <fullName>F&amp;R: Financial</fullName>
                </value>
                <value>
                    <fullName>F&amp;R: FXall</fullName>
                </value>
                <value>
                    <fullName>F&amp;R: GRC</fullName>
                </value>
                <value>
                    <fullName>FindLaw.com</fullName>
                </value>
                <value>
                    <fullName>GGO: Corporate</fullName>
                </value>
                <value>
                    <fullName>GGO: F&amp;R - Financial</fullName>
                </value>
                <value>
                    <fullName>GGO: F&amp;R - FXall</fullName>
                </value>
                <value>
                    <fullName>GGO: F&amp;R - GRC</fullName>
                </value>
                <value>
                    <fullName>GGO: Government</fullName>
                </value>
                <value>
                    <fullName>GGO: IP &amp; Science</fullName>
                </value>
                <value>
                    <fullName>GGO: Legal</fullName>
                </value>
                <value>
                    <fullName>GGO: Tax &amp; Accounting</fullName>
                </value>
                <value>
                    <fullName>Inbound Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ecom_Tracking_Code_Url__c</fullName>
        <label>Tracking Code Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>End_Journey_Reason__c</fullName>
        <label>End Journey Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bad Credit</fullName>
                </value>
                <value>
                    <fullName>Active Online</fullName>
                </value>
                <value>
                    <fullName>Inactive Recent Online</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>New Sales Campaign code</label>
    <pluralLabel>New Sales Campaign codes</pluralLabel>
</CustomObject>